kubernetes/aws-project-helm/wordpress-k8s/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  #single virtual IP with built-in load balancing across Pods.
  type: ClusterIP
  selector:
    app: wordpress
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
